# 0verforge

./: 0verflow.py  LICENSE  Makefile  README.md  pyproject.toml  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/commands/: route.ts
components/: agents-panel.tsx  architecture-diagram.tsx  chat-panel.tsx  covenant-panel.tsx  rsi-cycle-log.tsx  status-card.tsx
src/zeroverforge/: __init__.py
src/zeroverforge/api/: fastapi_app.py  routes_extended.py
src/zeroverforge/core/: __init__.py  agents.py  archive.py  comms.py  covenant.py  covenant_enforcer.py  git_manager.py  orchestrator.py  rsi_engine.py
tests/: test_smoke.py
