[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "0verforge"
version = "0.1.0"
description = "Recursive self-improving multi-agent system (scaffold)"
authors = [ { name = "tdug0" } ]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest", "uvicorn[standard]", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]
